# kilo

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CODE_REVIEW.md  CODE_REVIEW_2025.md  COVERAGE.md  FIXES_APPLIED.md  LICENSE  MARKDOWN_QUICKSTART.md  MINIMAL_CORE_PLAN.md  Makefile  README.md  REFACTORING_PLAN_TERMINAL.md  REPL_LINE_EDITING.md  ROADMAP.md  SECURITY.md  SYNTAX_LSP_RESEARCH.md  TODO.md  kilo.c  loki.c  lua_one.c  migrate_phase2.sh
.github/workflows/: ci.yml
.kilo/: README.md  init.lua
.loki/: README.md  init.lua
.loki/languages/: c.lua  cython.lua  go.lua  java.lua  javascript.lua  lua.lua  markdown.lua  python.lua  rust.lua  shell.lua  sql.lua  swift.lua  typescript.lua
.loki/modules/: README.md  ai.lua  editor.lua  example.lua  languages.lua  markdown.lua  modal.lua  test.lua  theme.lua
.loki/themes/: README.md  dracula.lua  github-light.lua  monokai.lua  nord.lua
docs/: GLOBAL_STATE_REFACTORING.md  MARKDOWN_RENDERING.md  PHASE2_PROGRESS.md  REFACTOR_COMPLETE.md  SYNTAX_LSP_RESEARCH.md  architecture.md  code_review_2025.md  fixes_applied.md  git-commit-conventions.md  minimal_core_plan.md  remove_global.md  repl-missing-features.md  repl_extension.md  security.md
docs/dev/: LAZY_LOADING_IMPLEMENTATION.md  code_review.md  command.md  coverage.md  language-duplication-issue.md  language_api_design.md  lazy-language-loading.md  lua_async_http.md  markdown_quickstart.md  minimal_core_plan.md  modal_editing.md  refactor_complete.md  repl-libraries.md  repl-missing-features.md  repl_line_editing.md  roadmap-earlier.md  syntax_lsp_research.md  syntax_refactor.md  tabs-design.md  tree-sitter.md  undo.md
include/loki/: core.h  editor.h  lua.h  version.h
src/: loki_buffers.c  loki_buffers.h  loki_command.c  loki_command.h  loki_core.c  loki_core.c.backup2  loki_core.c.bak  loki_core.c.pre-refactor  loki_editor.c  loki_indent.c  loki_indent.h  loki_internal.h  loki_internal.h.pre-refactor  loki_languages.c  loki_languages.h  loki_lua.c  loki_lua.c.pre-refactor  loki_markdown.c  loki_markdown.h  loki_modal.c  loki_modal.h  loki_search.c  loki_search.h  loki_selection.c  loki_selection.h  loki_syntax.c  loki_syntax.h  loki_terminal.c  loki_terminal.h  loki_undo.c  main_editor.c  main_repl.c
tests/: test_buffers.c  test_core.c  test_file_io.c  test_framework.c  test_framework.h  test_http_security.c  test_http_simple.c  test_indent.c  test_lang_registration.c  test_lua_api.c  test_modal.c  test_modal_summary.txt  test_search.c  test_syntax.c
